# hsp4

./: LICENSE  hsp4.cabal
app/: Config.hs  Main.hs
app/Data/String/: Parse.hs
